# Java-code-1

./: bianyi.java  bianyi1.java  bianyi2.java  jishiqi_by_fu_tb.v  study.txt  test.java
Internet_Program/: Base.java  GetData.java  GetDataByGroup1.java  SendData.java  SendDataByGroup.java
JavaClassTask1/: CoreCourse.java  Course.java  CourseList.java  DataManager.java  Main.java  Option.java  Person.java  Student.java  Teacher.java  User.java  UserList.java
Javashiyan/: Course.java  Main.java  Student.java  Teacher.java  User.java
demo/: pom.xml
my_DynamicProxy/: Base.java
my_abstract/: concept.txt
my_api/: concept.txt
my_exception/: DefinedException.java  Demo1.java  Demo2.java  HowToDealException.java  Student.java  ThrowException.java  UsualFunction.java  concept.txt
my_extends/: concept.txt
my_file/: FileBase.java  Practice1.java  UsualFunction.java
my_functioncite/: Demo1.java  Demo2.java  (+4 more)
my_openai/AgentDemoUseMCP/mcp-agent-project/: .env.example  README.md  pyproject.toml  requirements.txt
my_openai/AgentDemoUseMCP/mcp-agent-project/src/: main.py
my_openai/AgentDemoUseMCP/mcp-agent-project/src/agent/: base_agent.py  mcp_agent.py
my_openai/AgentDemoUseMCP/mcp-agent-project/src/config/: settings.py
my_openai/AgentDemoUseMCP/mcp-agent-project/src/mcp/: context_manager.py  message_handler.py  protocol.py
my_openai/AgentDemoUseMCP/mcp-agent-project/src/models/: model_interface.py
my_openai/AgentDemoUseMCP/mcp-agent-project/src/tools/: tool_registry.py
my_openai/AgentDemoUseMCP/mcp-agent-project/tests/: test_agent.py  test_mcp.py
(+340 files in other folders)
